<resources>
    <string name="app_name">TVG</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="linkSignup">No account yet? Create one</string>
    <string name="you_wrote">Hello </string>
    <string name="some_text">some text</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="InvaliUser">Invalid user</string>
    <string name="userNameError">Not a valid username!</string>
    <string name="PasswordError">Not a valid password!</string>
    <string name="CounterText">Counter:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
